<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#efefef" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="45.3dp"
        android:background="#3399FF" >

        <TextView
            android:id="@+id/hd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        
        <ImageView android:id="@+id/settingBtn"
             android:layout_width="30dp" 
             android:layout_height="30dp" 
             android:src="@drawable/hd_btn_setting" 
             android:layout_centerVertical="true" 
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="SSID:"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/ssid"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/label_password"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/showPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/label_show_password"
                android:textColor="#000000" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/connect"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="#3399FF"
                android:text="@string/btn_connect"
                android:textColor="#ffffff" />
            
            <Button
                android:id="@+id/unsavedBtn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="#3399FF"
                android:text="@string/btn_unsaved_device"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:textColor="#938192"
        android:text="@string/app_name" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:textColor="#938192"
        android:text="All rights reserved" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:textColor="#938192"
        android:text="@string/copyrighter" />
    
    <TextView
        android:id="@+id/versionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textColor="#938192"/>

</RelativeLayout>